<resources>
    <string name="app_name">smProject5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="add_to_order">Add to Order</string>
    <string name="remove">Remove</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>

    <string name="add_success">Item(s) Successfully Added to your Order!</string>
    <string name="empty_order_warning">Order Cannot Be Empty!</string>
    <string name="order_success">Successfully Placed Order!</string>

    <string name="error">Error!</string>
    <string name="empty_order">Cannot place an empty order!</string>

    <string name="remove_item">Remove Item</string>
    <string name="remove_from_order">Are you sure you want to remove this?</string>
    <string name="remove_success">Item successfully removed!</string>
    <string name="not_removed">Item not removed</string>

    <string name="donut_added">Donut added</string>

    <string name="place">Place this Order</string>

    <string name="coffee_fragment_label">Order Coffee</string>
    <string name="donut_fragment_label">Order Donuts</string>
    <string name="basket_fragment_label">Current Order</string>
    <string name="orders_fragment_label">Store Orders</string>
    <string name="main_fragment_label">Welcome to Rutgers Cafe!</string>

    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>

    <string name="sub_label">Subtotal:</string>
    <string name="tax_label">Tax:</string>
    <string name="total_label">Total:</string>
    <string name="store_orders">Store Orders</string>
    <string name="rutgers_cafe">Rutgers Cafe</string>
</resources>